# posebench

./: README.md  download_data.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
results/: baseline-subsampled-10.2_0_5.json  baseline-subsampled-10.json  baseline.2_0_5.json  baseline.json
src/posebench/: __init__.py  __main__.py  absolute_pose.py  estimators.py  homography.py  monodepth_relative_pose.py  relative_pose.py
src/posebench/utils/: misc.py
tests/: test_benchmark.py
