[project]
name = "posebench"
version = "0.0.1"
description = "PoseBench: A Benchmark for Absolute and Relative Pose Estimation"
readme = "README.md"
authors = [
    { name = "Viktor Larsson", email = "viktor.larsson@maths.lth.se" }
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.11.0",
    "opencv-python>=4.12.0.88",
    "poselib",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
posebench = "posebench:main"

[project.optional-dependencies]
colmap = ["pycolmap>=3.12.3"]
dev = [
    "ruff==0.15.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
indent-style = "space"